--- a/styles/personal.styl
+++ b/styles/personal.styl
@@ -35,12 +35,6 @@
   background-color D4D46A
   padding-left 10px
 
-.ours
-  size 0.8em
-  font-weight 700
-  color darkblue
-  font-style italic
-
 .selected
   background-color lightgoldenrodyellow
 
@@ -82,6 +76,8 @@
 
 .click {
   cursor: pointer;
+  font-size: 1.5em;
+  font-weight: 700;
 }
 
 .pageSection {
@@ -201,3 +197,17 @@ div, h3 {
   color: white;
   padding: 0.3em;
 }
+
+.api
+  background-color lightgrey
+  font-family: 'Courier'
+
+.ours
+  font-weight 700
+  color darkblue
+
+.optionalBlock
+  margin-left 5%
+  margin-right 5%
+  font-size 1.3em
+
