--- a/sections/personal/knowmore.pug
+++ b/sections/personal/knowmore.pug
@@ -10,27 +10,8 @@
     p.text Participating in this collaborative experiment permits to see how the information flows inside Facebook. Considering Facebook as one of the places where information worldwide flows into, and it is entirely obscure, you are helping the society to understand itself (well, at least, this is what we want to belive. Then, the project has to be collaborative and find partners).
 
     h3 What in 2018?
-    p.text facebook.tracking.exposed it is supposed to offer functionality in the interest of the user. A brief story you can read is this one:
-    p.text 
+    p.text This page explains what we have in progress, and the initiatives pages what we did so far.
 
-
-    p.text
-      b Our goal is not making analysis
-      |  rather, we want enable others. 
-
-    h3 Roadmap
-    p.text Data stored is not personal in a sense we do not collect what the user do or send to Facebook. What we have, could implicitly reflect your interests.
-    p.text Besides the privacy declaration and your willing agreement accepted when you published your key, there are few steps intended to increase the fairness of this experiment
-    ol
-      li privacy preserving mechanism is in development, at the moment we are sharing only the data of dummy users. Before sharing the data of actual users, we want to define an ethical agreement with researchers and an anonymization logic of the data.
-      li authentication: the user can share the access to the timeline, to whom they want. The informative diet has to be accessible to the user. There is some technical complexity to be solved because we do not manage login, password or Facebook access token. 
-
-    p.text It is public on facebook who you follow, and we are talking about a sophisticated corporate surveillance technology: what is on facebook is lost without any hope. Still, we do not want to help any further data exploitation.
-
-    h3 Problems
-    p.text Some data might still be lost in the collection. You can check on the section 
-      i data
-      |  and see if the system is properly collecting and analyzing data. If not, you can drop a message to the 
       a(href="https://www.facebook.com/personalizationalgorithm") facebook page
       |, or open a 
       a(href="https://github.com/tracking-exposed/facebook") github issue
