--- a/sections/personal/landing.pug
+++ b/sections/personal/landing.pug
@@ -56,10 +56,8 @@ html
               span.glyphicon.glyphicon-cog
               |  Export and reuse
         ul.nav.navbar-nav.navbar-right.black
-          li.presentation
-            a.switch#knowmore.click Know more
           li
-            a(href='/' alt='return to project homepage')
+            a(href='/' alt='return to project homepage').click
               span.glyphicon.glyphicon-home
               | 
               span.glyphicon.glyphicon-log-out
@@ -113,8 +111,4 @@ html
     .container-fluid
       .pageSection#csvSection.hidden
         include csv
-
-    .container-fluid
-      .pageSection#knowMoreSection.hidden
-        include knowmore
 
