update personal page info

--- a/sections/personal/landing.pug
+++ b/sections/personal/landing.pug
@@ -74,16 +74,16 @@ html
           div.col-sm-4.infoblock.description
             p How much Facebook insists on you?
             small this is based on the last 20 days, address "
-                a(id="repetitionInfo") repetition
+                a.trigger(id="repetitionInfo") repetition
                 |"
           div.col-sm-4.infoblock.description
             p Details
             small know more on 
-                a(id="metadataInfo") metadata attribution 
+                a.trigger(id="metadataInfo") metadata attribution 
           div.col-sm-4.infoblock.description
             p Facebook guess what you like?
             small Do you agree with their prioritisation? 
-                a(id="candymetaphor") what if...
+                a.trigger(id="candymetaphor") what if...
 
         .container-fluid
           include repetitionInfo
