--- a/styles/personal.styl
+++ b/styles/personal.styl
@@ -80,6 +80,10 @@
   font-weight: 700;
 }
 
+.trigger {
+  cursor pointer
+}
+
 .pageSection {
   font-family: 'Work Sans', sans-serif;
   background-color: white;
@@ -127,8 +131,8 @@ div, h3 {
 }
 
 #shiftContributionBlock {
-  margin: 8px;
-  cursor: 'pointer';
+  margin 8px
+  cursor pointer
 }
 
 .promoted {
@@ -209,5 +213,13 @@ div, h3 {
 .optionalBlock
   margin-left 5%
   margin-right 5%
+  border black 1px solid
+  padding 5px
+  border-radius 10px
   font-size 1.3em
 
+.whatif
+  color white
+  font-size 0.9em
+  background-color black
+  border-radius 10px
