--- a/sections/personal/candymetaphor.pug
+++ b/sections/personal/candymetaphor.pug
@@ -1,9 +1,18 @@
 .optionalBlock#candymetaphorBlock
 
-    .col-md-2 You know how a diet has to be balanced
-        small In the information age, you are what you are exposed at!
-    .col-md-2 Facebook decides for you what you are going to absorbe
-        small Something because you are experiment, sometime because of their politics
-    .col-md-2 what if you are only eating candies?
-        small Only you can judge if what you are getting is the best of you!
+    .col-md-4 
+        p You know how a diet has to be balanced
+        p.whatif In the information age, you are what you are exposed at!
+    .col-md-4 
+        p.whatif Facebook decides for you what you are going to absorbe
+        p Sometimes because 
+            a(href="https://www.forbes.com/sites/gregorymcneal/2014/06/28/facebook-manipulated-user-news-feeds-to-create-emotional-contagion/#66a1275739dc") you are experiment
+            |, or because the 
+            a(href="https://eu.usatoday.com/story/tech/2018/01/11/facebook-newsfeed-big-change/1023331001/") mandate changes
+            |, and who knows what next?
+    .col-md-4 
+        p Keeping the metaphor, what if you are only 
+            i 
+                b eating candies?
+        p.whatif Only you can judge if what you are getting is the best of you!
 
