--- a/sections/personal/repetitionInfo.pug
+++ b/sections/personal/repetitionInfo.pug
@@ -1,4 +1,8 @@
 .optionalBlock#repetitionInfoBlock
 
-    p the most arbitrary decision of Facebook is display a post more than once, despite, most of the time, new updates are available. This lead stunning personal surprises or to unjustifiable political side-effects. 
+    p the most arbitrary decision of Facebook is display a post more than once, despite new updates could be available and important for you! This lead at 
+        a(href="https://www.theverge.com/2017/12/19/16796078/facebook-friend-death-post-algorithm-problems") stunning personal surprises
+        |, or to 
+        a(href="https://medium.com/@trackingexposed/the-iron-bubble-or-how-the-facebook-algorithm-insulates-fascists-from-reality-d36739b0758b") unjustifiable political side-effects
+        |. 
 
