--- a/sections/realitycheck.pug
+++ b/sections/realitycheck.pug
@@ -52,20 +52,18 @@ html
                 |.
             li Spanish language is supported
             li A clearer opt-in process
-            li Work in progress in the new personal interface, you can see the 
-                a(href="/personal/anonymous") anonymous timeline here
-                |.
+            li Work in progress in the new personal interface!
             li FbTREX and WebFoundation deliver an innovative black box analysis of Facebook algorithm in Argentina (check it out the 
                 a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") report written by the WebFoundation
                 |).
-            li FbTREX team made an even more advanced analysis of the Italian national elections, you can find 6 page written by Fabio Chiusi and Claudio Agosti in 
+            li FbTREX team made an even more advanced analysis of the Italian national elections, you can find a report written by Fabio Chiusi and Claudio Agosti in 
                 a(href="https://ourdataourselves.tacticaltech.org/posts/overview-italy/") this report by TacticalTech
                 |.
             li Inspired by 
                 a(href="https://legacy.gitbook.com/book/hintjens/social-architecture/details") Social Architecture - Building On-line Communities
-                |, I'm trying to replicate the 
+                |, we want to replicate the 
                 a(href="https://rfc.zeromq.org/spec:42/C4/") Collective Code Construction Contract
-                |, or C4. 
+                |, or C4. See below for more details. 
             li If you are a data analyst or want to play with data, 
                 a(href="https://github.com/tracking-exposed/experiments-data/tree/master/e18") we released the full dataset obtain during the Italian 2018 electoral campaign experiment
                 |. It is a Mix of two data sources: 100% of the post shared by 30 pages and what Facebook decided to show to 6 bots run buy us. The bots were following only the said 30 pages, the only difference among them was few 
@@ -78,12 +76,12 @@ html
 
         h2 On C4  
         p.text C4 is meant to provide a reusable optimal collaboration model for open source software projects. It has these specific goals:
-            ol
-                li To maximize the scale and diversity of the community around a project, by reducing the friction for new Contributors and creating a scaled participation model with strong positive feedbacks;
-                li To relieve dependencies on key individuals by separating different skill sets so that there is a larger pool of competence in any required domain;
-                li To allow the project to develop faster and more accurately, by increasing the diversity of the decision making process;
-                li To support the natural life cycle of project versions from experimental through to stable, by allowing safe experimentation, rapid failure, and isolation of stable code;
-                li To reduce the internal complexity of project repositories, thus making it easier for Contributors to participate and reducing the scope for error;
-                li To enforce collective ownership of the project, which increases economic incentive to Contributors and reduces the risk of hijack by hostile entities. 
+        ul.fb--icon-list
+            li To maximize the scale and diversity of the community around a project, by reducing the friction for new Contributors and creating a scaled participation model with strong positive feedbacks;
+            li To relieve dependencies on key individuals by separating different skill sets so that there is a larger pool of competence in any required domain;
+            li To allow the project to develop faster and more accurately, by increasing the diversity of the decision making process;
+            li To support the natural life cycle of project versions from experimental through to stable, by allowing safe experimentation, rapid failure, and isolation of stable code;
+            li To reduce the internal complexity of project repositories, thus making it easier for Contributors to participate and reducing the scope for error;
+            li To enforce collective ownership of the project, which increases economic incentive to Contributors and reduces the risk of hijack by hostile entities. 
 
 
