--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -1,34 +1,12 @@
 block useit
-  h2 Use It!
 
-  p Install the 
-    a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/") Firefox extension
-    |, because 
-    b the Chrome version is currently in 
-        a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") TakeDown
-    |. We are dealing with this 
-    a(target="_blank" href="https://github.com/tracking-exposed/web-extension/issues/72") issue
-    |. At the moment the scarcity of resources from our side keeps the situation that way. 
-    b At least, you can 
-    a(target="_blank" href="https://medium.com/@trackingexposed") enjoy our publications
-    |.
-  p
-    a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")    
-        img(src="./images/firefoxextension.png")
-
-  h3 This project enabled academic research and analysis on the impact of algorithms. 
-  p 
-    ul.fb--icon-list
-      li Read the report published with the 
-        a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") WebFoundation.
-      li For research and data analyst interested in the algorithm influence, 
-        a(href="https://github.com/tracking-exposed/experiments-data/tree/master/e18") we released the full dataset obtain during the Italian 2018 electoral campaign experiment
-        |. In italian language, the 
-        a(href="https://github.com/tracking-exposed/presentation/blob/master/Progetto%20fbtrex%20-%20Revisione%208%20-%20Aprile%202018.pdf") paper
-        |, and the 
-        a(href="https://github.com/tracking-exposed/presentation/blob/master/elezioni.tracking.exposed%20slide%20finali.pdf") slides
-        |.
-      li This is our last small blog: 
-        b
-          a(href="https://medium.com/@trackingexposed/preventing-the-next-cambridge-analytica-s-78345f9834ff") Preventing the next Cambridge Analytica(s)
-        |.
+  .container-fluid.center
+    h2 Join us! 
+    .col-md-6
+      a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")
+        img(src="/images/AMO-button_1.png")
+    .col-md-6
+      a(target="_blank" href="https://chrome.google.com/webstore/detail/trackingexposed-investiga/glfebiffpejfbgppbhgcpeffmikjkmpc")
+        img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
+    
+ 
