--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -1,7 +1,7 @@
 block useit
 
   .container-fluid.center
-    h2 Join us! 
+    h2 Use this! Install the browser extension
     .col-md-6
       a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")
         img(src="/images/AMO-button_1.png")
