fine tuning of the navbar

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -14,13 +14,13 @@ block navbar
             li
               a(href='/') Home
             li
-              a(href='/impact/') Stats
+              a(href='/initiatives/') Results
             li
               a(href='/privacy-statement') Privacy 
             li
               a(href='/project') The Project 
             li
-              a(href='/initiatives/') Initiatives
+              a(href='/impact/') Stats
             li
               a(href='/about') About
             
