--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -28,9 +28,11 @@ html
     div.mainstyle
       h3 2018 
       ul.fb--icon-list
-        li TacticalTech publish aa report written by Claudio Agosti and Fabio Chiusi, on 
+        li TacticalTech publish a report written by Claudio Agosti and Fabio Chiusi, on 
             a(href="https://ourdataourselves.tacticaltech.org/posts/overview-italy/") Italian political election and digital propaganda
-            |.
+            |. FbTREX data, released in 
+            a(href="https://github.com/tracking-exposed/experiments-data/tree/master/e18") this repository
+            |, have been used in a portion of the report.
         li WebFoundation released a report produced by a joint collaboration:
             a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") The invisible curation of content
             |.
