--- a/sections/team.pug
+++ b/sections/team.pug
@@ -67,12 +67,17 @@ html
 
 
         div.mainstyle
-            h2 Maintainer, past and current contributors
+            h2 Coordinator, contributors, past and current 
             table.table.table-striped
                 tbody
                     tr
                         td
                             a(href="https://twitter.com/_vecna" target="_blank") Claudio Agosti
+                        td Giovanni Civardi (
+                            a(href="https://twitter.com/@ciaby" target="_blank") ciaby
+                            |)
+                        td Costantino Carugno
+                        td Raffaele Angus
                     tr
                         td 
                             a(href="https://twitter.com/vrde" target="_blank") Alberto Granzotto
@@ -89,11 +94,5 @@ html
                             a(href="https://twitter.com/gmcmullen" target="_blank") Greg McMullen
                         td 
                             a(href="https://twitter.com/osd_it" target="_blank") OpenSensorsData
-                    tr
-                        td Giovanni Civardi (
-                            a(href="https://twitter.com/@ciaby" target="_blank") ciaby
-                            |)
-                        td Costantino Carugno
-                        td Raffaele Angus
 
         div.footer 
