--- a/sections/project.pug
+++ b/sections/project.pug
@@ -27,6 +27,10 @@ html
 
     div#project
       div.polite-propaganda
+        small
+            i Written on July'17. Still valid one year later, baked by some 
+                a(href="/initiatives") results
+                |.
         h2 What is the problem?
 
         ul.fb--icon-list 
@@ -89,6 +93,6 @@ html
             b Engage and support researchers
         ul.fb--icon-list
             li Provide support for research organizations as early adopters.
-            li Presentation at SHA2017 in August, call for engagement. We have done other 
+            li Presentation, Advocacy, finding collaborators, keep doing 
                 a(href="https://facebook.tracking.exposed/initiatives") public appearance
                 |.
