--- a/sections/personal/landing.pug
+++ b/sections/personal/landing.pug
@@ -112,3 +112,8 @@ html
       .pageSection#csvSection.hidden
         include csv
 
+    div.footer
+        small
+            a(href="https://github.com/tracking-exposed/facebook/blob/master/sections/webscripts/personal.js") This interface is generated without any design/UX skills, if you can, 
+                b please
+                |, contribute to the project =)
