--- a/sections/personal/landing.pug
+++ b/sections/personal/landing.pug
@@ -116,4 +116,4 @@ html
         small
             a(href="https://github.com/tracking-exposed/facebook/blob/master/sections/webscripts/personal.js") This interface is generated without any design/UX skills, if you can, 
                 b please
-                |, contribute to the project =)
+                |, contribute =)
