--- a/sections/personal/csv.pug
+++ b/sections/personal/csv.pug
@@ -63,5 +63,8 @@
                 span.ours ctrlGroupName_0fh3s034hp
                 |), which you can share among the participants in the collection. When they want, they can retrieve their data with:
             div.api
-                h4 https://facebook.tracking.exposed/researcher/l:ctrlGroupName_0fh3s034hp
+                h4 facebook.tracking.exposed/api/v1/research/data/l:ctrlGroupName_0fh3s034hp
+            p.text Or you can get stats on how the collection is doing with this API:
+            div.api
+                h4 facebook.tracking.exposed/api/v1/research/stats/l:ctrlGroupName_0fh3s034hp
 
