--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -6,7 +6,8 @@ block useit
       a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")
         img(src="/images/AMO-button_1.png")
     .col-md-6
-      a(target="_blank" href="https://chrome.google.com/webstore/detail/trackingexposed-investiga/glfebiffpejfbgppbhgcpeffmikjkmpc")
+      a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi")
+      //a(target="_blank" href="https://chrome.google.com/webstore/detail/trackingexposed-investiga/glfebiffpejfbgppbhgcpeffmikjkmpc")
         img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
     
  
