--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -66,7 +66,8 @@ html
         tbody
           tr
             td 20th July '18
-            td HOPE 
+            td 
+              a(href="https://livestream.com/accounts/9198012/hope/videos/178834386") HOPE XII (45 minutes)
             td
               a(href="https://github.com/tracking-exposed/presentation/blob/master/HOPE-2018.pdf") .pdf
             td
