forgot the image about chrome extension

--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -7,6 +7,7 @@ block useit
         img(src="/images/AMO-button_1.png")
     .col-md-6
       a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi")
+        img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
       //a(target="_blank" href="https://chrome.google.com/webstore/detail/trackingexposed-investiga/glfebiffpejfbgppbhgcpeffmikjkmpc")
         img(src="/images/ChromeWebStore_Badge_v2_206x58.png")
     
