fixed/updated info on talks

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -36,26 +36,31 @@ html
         li WebFoundation released a report produced by a joint collaboration:
             a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") The invisible curation of content
             |.
-        li The first academic paper entirely based on FbTREX data: 
+        li The 
+            a(href="https://arxiv.org/abs/1807.08346") first academic paper
+            |  entirely based on FbTREX data, if you want to reference it:
             pre.
                 @unpublished{FacebookFairness,
                 author = {Hargreaves, Eduardo and Agosti, Claudio and Menasch{\'{e}}, Daniel and Neglia, Giovanni and Reiffers-masson, Alexandre and Altman, Eitan},
                 booktitle = {to appear in the 36th International Symposium on Computer Performance, Modeling, Measurements and Evaluation 2018},
                 title = {{Fairness in Online Social Network Timelines : Measurements , Models and Mechanism Design}}
-        li For the Italian elections 2018 has been made a certain campaign, the main website is in italian
+        li For the Italian elections 2018 has been made a dedicated campaign, with this dedicated website (in italian) 
           a(href="https://elezioni.tracking.exposed") https://elezioni.tracking.exposed
-          |  some small blogpost commenting on the analysis are:
-          a(href="https://medium.com/@trackingexposed/facebook-tracking-exposed-background-80e0f72e615f") fbtrex - Background
+          |  some English blogpost commenting on the analysis are: 
+          a(href="https://medium.com/@trackingexposed/facebook-tracking-exposed-background-80e0f72e615f") Methodology/Background
           |, 
-          a(href="https://medium.com/@trackingexposed/testing-facebook-algorithm-in-an-electoral-campaign-methodology-e7f886776890") testing Facebook algorithm in an electoral campagin (methodology)
+          a(href="https://medium.com/@trackingexposed/testing-facebook-algorithm-in-an-electoral-campaign-methodology-e7f886776890") how we test Facebook algorithm 
           |, 
-          a(href="https://medium.com/@trackingexposed/first-sighting-of-facebook-algorithmic-influence-9e6a0a70781b") first sighting of Facebook algorithm influence
+          a(href="https://medium.com/@trackingexposed/first-sighting-of-facebook-algorithmic-influence-9e6a0a70781b") first observation of algorithm influence
           |, 
-          a(href="https://medium.com/@trackingexposed/judging-algorithm-discrimination-faee15989be") judging algorithm discrimination
+          a(href="https://medium.com/@trackingexposed/judging-algorithm-discrimination-faee15989be") when an algorithm is fair? judging discrimination
           |, 
-          a(href="https://medium.com/@trackingexposed/facebook-stab-online-media-twice-3bd751dbd819") Facebook stab online media twice
+          a(href="https://medium.com/@trackingexposed/facebook-stab-online-media-twice-3bd751dbd819") Facebook stab online News Media twice
+          |, and 
+          a(href="https://medium.com/@trackingexposed/the-iron-bubble-or-how-the-facebook-algorithm-insulates-fascists-from-reality-d36739b0758b") how FB algorithm insulates fascists from reality
           |.
 
+      h3 Talks with video
       table.table.table-striped
         thead
           tr
@@ -71,14 +76,15 @@ html
             td
               a(href="https://github.com/tracking-exposed/presentation/blob/master/HOPE-2018.pdf") .pdf
             td
+              English
           tr
             td 12th April '18
             td
               a(href="https://www.journalismfestival.com/programme/2018/algorithms-corporate-surveillance-and-elections-argentinian-and-italian-cases") IJF18, Italian & Argentinian cases
             td
               a(href="https://github.com/tracking-exposed/presentation/blob/master/slides-perugia-2018-ClaudioFederico.pdf") .pdf
-
             td
+              English
 
       h3 2017 - 2016
       ul.fb--icon-list
@@ -99,6 +105,7 @@ html
           a(href="/beta") beta
           |  announcement. Lesson learn and what's new. For supporters and technologist
 
+      h3 Talks with video
       table.table.table-striped
         thead
           tr
