added link to @CirKu17 blogpost

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -46,7 +46,9 @@ html
                 title = {{Fairness in Online Social Network Timelines : Measurements , Models and Mechanism Design}}
         li For the Italian elections 2018 has been made a dedicated campaign, with this dedicated website (in italian) 
           a(href="https://elezioni.tracking.exposed") https://elezioni.tracking.exposed
-          |  some English blogpost commenting on the analysis are: 
+          |  some 
+            b English 
+          | blogpost commenting on the analysis are: 
           a(href="https://medium.com/@trackingexposed/facebook-tracking-exposed-background-80e0f72e615f") Methodology/Background
           |, 
           a(href="https://medium.com/@trackingexposed/testing-facebook-algorithm-in-an-electoral-campaign-methodology-e7f886776890") how we test Facebook algorithm 
@@ -58,9 +60,12 @@ html
           a(href="https://medium.com/@trackingexposed/facebook-stab-online-media-twice-3bd751dbd819") Facebook stab online News Media twice
           |, and 
           a(href="https://medium.com/@trackingexposed/the-iron-bubble-or-how-the-facebook-algorithm-insulates-fascists-from-reality-d36739b0758b") how FB algorithm insulates fascists from reality
+          |. +this is in 
+            b Italian 
+            a(href="https://medium.com/@cirku17/takeaways-tattici-sullinformazione-politica-social-driven-7514b9d8f3d7") Takeaways tattici sull'informazione politica social driven
           |.
 
-      h3 Talks with video
+      h3 Talks, video and audio
       table.table.table-striped
         thead
           tr
