--- a/styles/index.styl
+++ b/styles/index.styl
@@ -223,4 +223,18 @@ p
     cursor pointer
 
 .space
-   margin-bottom 20px
+    margin-bottom 20px
+
+/* used in qualitative research interface */
+.bluetteline
+    border-top solid #88bbef 2px
+
+.evalwindow
+    background-color aliceblue
+
+.sendeval
+    margin-left: 50%;
+    margin-right: 50%;
+    position: relative;
+    height: 40px;
+    width: 120px;
