--- a/sections/research/landing.pug
+++ b/sections/research/landing.pug
@@ -20,33 +20,28 @@ html
         meta(name="keywords" content="facebook tracking exposed")
         meta(property="og:title" content="facebook.tracking.exposed")
         meta(property="og:type" content="website")
-        meta(property="og:description" content="facebook.tracking.exposed Admin Research interface")
+        meta(property="og:description" content="facebook.tracking.exposed Researcher's landing page")
         meta(property="og:url" content="https://facebook.tracking.exposed")
         meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
         meta(property="og:image:width" content="400")
         meta(property="og:image:height" content="400")
-        title Adoption trends, metadata extraction and open statistics
+        title FbTREX, researcher's landing page
 
-    body(onload="specialInit();")
+    body(onload="landingInit();")
     
     include ../header
     include ../navbar
 
     .container-fluid
         .simpletext
-            h2 Admin Researcher interface
+            h2 Researcher administrative interface
             
         .simpletext.hidden#oops
             h1 If you see this text, is because you didn't put the proper password in the URL
             h1 ask to claudio at tracking . exposed 
 
         .simpletext.hidden#results
-
-
-            .col-md-1
-            .col-md-4
-                
-
-
+            h2#projectName
+            #graphContainer 
 
     div.footer
