completed working prototype of the researcher interface for qualitative analysis

--- a/sections/research/landing.pug
+++ b/sections/research/landing.pug
@@ -44,4 +44,14 @@ html
             h2#projectName
             #graphContainer 
 
+            .table-responsive
+                table.table
+                    thead
+                        tr
+                            th #
+                            th publication day
+                            th evaluated
+                            th notyet
+                    tbody#tableContent
+
     div.footer
