baked are cakes, backed are the results

--- a/sections/project.pug
+++ b/sections/project.pug
@@ -28,7 +28,7 @@ html
     div#project
       div.polite-propaganda
         small
-            i Written on July'17. Still valid one year later, baked by some 
+            i Written on July'17. Still valid one year later, backed by some 
                 a(href="/initiatives") results
                 |.
         h2 What is the problem?
