made echoes library work inside docker added Diego as contributor improved Dockerfile added two different index added echo inside events.js "

--- a/sections/team.pug
+++ b/sections/team.pug
@@ -94,5 +94,7 @@ html
                             a(href="https://twitter.com/gmcmullen" target="_blank") Greg McMullen
                         td 
                             a(href="https://twitter.com/osd_it" target="_blank") OpenSensorsData
+                        td 
+                            a(href="https://github.com/joxer" target="_blank") Diego Luca Candido
 
         div.footer 
