Correcting a few errors

--- a/sections/realitycheck.pug
+++ b/sections/realitycheck.pug
@@ -27,36 +27,36 @@ html
     
     div.container-fluid.mainstyle
 
-        h2 Hi! is the 2018, this project run over a major update cycle, but first:
-        p.grateful Thanks for be resiliant and contributing to the project.
+        h2 Hi! it is 2018, and this project run over a major update cycle, but first:
+        p.grateful Thanks for being resilient and contributing to the project.
         p.grateful.left-link Despite the apparence, the project is doing OK. 
             b Besides...
             | We didn't yet offer features to you! 
-            | because it turn out, we achieve 
+            | because it turn out, we achieved 
             a(href="/initiatives") exciting results in research
-            |, and this was simpler than develop a UX. 
-        p.grateful Now the things are going to change, perhaps. Since version 1.1.15 (released 2018-07-17), the new personal dashboard has begin to be deployed.
-        p.grateful.left-link What happen in the last 12 months of 
+            |, and this was simpler than develop an UX. 
+        p.grateful Now the things are going to change, perhaps. Since version 1.1.15 (released 2018-07-17), the new personal dashboard has begun to be deployed.
+        p.grateful.left-link What happened in the last 12 months of 
             b FbTREX
             |?
 
         ul.fb--icon-list
             li Google Chrome 
-                a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") Take Down our browser extension
-                |. Alledegly this was due a  
+                a(target="_blank" href="https://www.openrightsgroup.org/blog/2018/facebook-don%E2%80%99t-want-you-to-know-how-their-algorithm-works") Took Down our browser extension
+                |. Allegedly this was due to a  
                 i trademark infringment 
                 | (for the presence of 'Facebook' in the name, meh!). The extension get renamed in '
                 b tracking.exposed: investigating algorithms
                 |', but Google legal team 
-                a(href="https://github.com/tracking-exposed/web-extension/issues/72") keep it down so far
+                a(href="https://github.com/tracking-exposed/web-extension/issues/72") kept it down so far
                 |.
             li Spanish language is supported
             li A clearer opt-in process
             li Work in progress in the new personal interface!
-            li FbTREX and WebFoundation deliver an innovative black box analysis of Facebook algorithm in Argentina (check it out the 
+            li FbTREX and WebFoundation delivered an innovative black box analysis of Facebook algorithm in Argentina (check out the 
                 a(href="https://webfoundation.org/research/the-invisible-curation-of-content-facebooks-news-feed-and-our-information-diets/") report written by the WebFoundation
                 |).
-            li FbTREX team made an even more advanced analysis of the Italian national elections, you can find a report written by Fabio Chiusi and Claudio Agosti in 
+            li FbTREX team made an even more advanced analysis of the Italian national elections, you can find a document written by Fabio Chiusi and Claudio Agosti in 
                 a(href="https://ourdataourselves.tacticaltech.org/posts/overview-italy/") this report by TacticalTech
                 |.
             li Inspired by 
@@ -65,10 +65,10 @@ html
                 a(href="https://rfc.zeromq.org/spec:42/C4/") Collective Code Construction Contract
                 |, or C4. See below for more details. 
             li If you are a data analyst or want to play with data, 
-                a(href="https://github.com/tracking-exposed/experiments-data/tree/master/e18") we released the full dataset obtain during the Italian 2018 electoral campaign experiment
-                |. It is a Mix of two data sources: 100% of the post shared by 30 pages and what Facebook decided to show to 6 bots run buy us. The bots were following only the said 30 pages, the only difference among them was few 
-                i like
-                |, and still the quality and diversity of the information shifted seriously.
+                a(href="https://github.com/tracking-exposed/experiments-data/tree/master/e18") we released the full dataset obtained during the Italian 2018 electoral campaign experiment
+                |. It is a mix of two data sources: 100% of the post shared by 30 pages and what Facebook decided to show to 6 bots run by us. The bots were following only the said 30 pages, the only differences among them were few 
+                i likes
+                |, and still the quality and diversity of information shifted seriously.
             li The 
                 b
                     a(href="https://tracking.exposed") Manifesto of tracking.exposed
